p5-date-calc: Version bump, give maintainership (#27102)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73065 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-date-calc/Portfile
+++ b/dports/perl/p5-date-calc/Portfile
@@ -3,8 +3,9 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Date-Calc 5.4
-maintainers         nomaintainer
+perl5.setup         Date-Calc 6.3
+license             Artistic/GPL
+maintainers         l2g.to:larry+macports
 description         Gregorian calendar date calculations
 long_description    The library provides all sorts of date calculations \
                     based on the Gregorian calendar (the one used in all \
@@ -13,7 +14,9 @@ long_description    The library provides all sorts of date calculations \
                     1355 and, to some extent, ISO 8601 (where \
                     applicable).
 
-checksums           md5 7ae34972694127e8f1c9a2af1c24585b
+checksums           md5     9b64555b7051c1beb6b61daead2d01b3 \
+                    sha1    05464e935cf2340fe72e3d81264ed633dc728926 \
+                    rmd160  5591594c553eae276ffcd6c0b781b6621f04b8b2
 
 platforms           darwin
 
