multimedia/libogg upgraded version from 1.2.0 to 1.2.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@73067 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libogg/Portfile
+++ b/dports/multimedia/libogg/Portfile
@@ -3,11 +3,11 @@
 PortSystem      1.0
 
 name            libogg
-version         1.2.0
+version         1.2.1
 categories      multimedia
 platforms       darwin
 use_parallel_build  yes
-maintainers     nomaintainer
+maintainers     rmstonecipher openmaintainer
 description     Ogg Bitstream Library
 
 long_description \
@@ -17,9 +17,9 @@ long_description \
 homepage        http://www.vorbis.com/
 master_sites    http://downloads.xiph.org/releases/ogg/
 
-checksums           md5     c95b73759acfc30712beef6ce4e88efa \
-                    sha1    135fb812282e08833295c91e005bd0258fff9098 \
-                    rmd160  35bbed1654b003a7b75dc9dca8e311ae73c03210
+checksums           md5     b998c2420721146df3b3d0e7776c97b9 \
+                    sha1    7d8b49e6546f29e6ade7b5dd5d85c869e35b428a \
+                    rmd160  50fd476d5ed7decb46626795c0e667c32404cc8c
 
 post-configure {
     if {[variant_isset universal]} {
