p5-algorithm-dependency: Whitespace (see #27101)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73069 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-algorithm-dependency/Portfile
+++ b/dports/perl/p5-algorithm-dependency/Portfile
@@ -1,26 +1,26 @@
 # $Id$
 
-PortSystem			1.0
-PortGroup			perl5 1.0
+PortSystem          1.0
+PortGroup           perl5 1.0
 
-perl5.setup			Algorithm-Dependency 1.106
-maintainers			nomaintainer
-description			Base class for implementing various dependency trees
-long_description \
-	Algorithm::Dependency is a framework for creating simple read-only \
-	dependency hierarchies, where you have a set of items that rely on \
-	other items in the set, and require actions on them as well.\
-	Despite the most visible of these being software installation systems \
-	like the CPAN installer, or debian apt-get, they are usefull in other \
-	situations. This module intentionally uses implementation-neutral \
-	words, to avoid confusion.
+perl5.setup         Algorithm-Dependency 1.106
+maintainers         nomaintainer
+description         Base class for implementing various dependency trees
+long_description    Algorithm::Dependency is a framework for creating simple \
+                    read-only dependency hierarchies, where you have a set \
+                    of items that rely on other items in the set, and \
+                    require actions on them as well.  Despite the most \
+                    visible of these being software installation systems \
+                    like the CPAN installer, or debian apt-get, they are \
+                    usefull in other situations. This module intentionally \
+                    uses implementation-neutral words, to avoid confusion.
 
-platforms			darwin
+platforms           darwin
 
-checksums			md5     60cb5584ceacd0a569537bc0ff359e1f \
-					sha1    cd2673f9962ec9ac1260e9927d8b2a421689559e \
-					rmd160  39563b0cfe1d94f89d407a7d82f56cc5ba0d9d9a
+checksums           md5     60cb5584ceacd0a569537bc0ff359e1f \
+                    sha1    cd2673f9962ec9ac1260e9927d8b2a421689559e \
+                    rmd160  39563b0cfe1d94f89d407a7d82f56cc5ba0d9d9a
 
-depends_lib-append      port:p5-params-util
+depends_lib-append  port:p5-params-util
 
-supported_archs noarch
+supported_archs     noarch
