p5-algorithm-dependency: Version bump, give maintainership (#27101)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73070 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-algorithm-dependency/Portfile
+++ b/dports/perl/p5-algorithm-dependency/Portfile
@@ -3,8 +3,9 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Algorithm-Dependency 1.106
-maintainers         nomaintainer
+perl5.setup         Algorithm-Dependency 1.110
+license             Artistic/GPL
+maintainers         l2g.to:larry+macports
 description         Base class for implementing various dependency trees
 long_description    Algorithm::Dependency is a framework for creating simple \
                     read-only dependency hierarchies, where you have a set \
@@ -17,10 +18,12 @@ long_description    Algorithm::Dependency is a framework for creating simple \
 
 platforms           darwin
 
-checksums           md5     60cb5584ceacd0a569537bc0ff359e1f \
-                    sha1    cd2673f9962ec9ac1260e9927d8b2a421689559e \
-                    rmd160  39563b0cfe1d94f89d407a7d82f56cc5ba0d9d9a
+checksums           md5     dc1dab2ac44c315caa092397423b1429 \
+                    sha1    341eb6e5319790068c86a4862826e2a4ba749b1d \
+                    rmd160  56995f5f6e7c4116fa11b1c9e1e0198ee85393f6
 
+depends_build-append \
+                    port:p5-test-classapi
 depends_lib-append  port:p5-params-util
 
 supported_archs     noarch
