--- a/dports/multimedia/libogg/Portfile
+++ b/dports/multimedia/libogg/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            libogg
 version         1.2.1
+revision	1
 categories      multimedia
 platforms       darwin
 use_parallel_build  yes
@@ -20,6 +21,8 @@ master_sites    http://downloads.xiph.org/releases/ogg/
 checksums           md5     b998c2420721146df3b3d0e7776c97b9 \
                     sha1    7d8b49e6546f29e6ade7b5dd5d85c869e35b428a \
                     rmd160  50fd476d5ed7decb46626795c0e667c32404cc8c
+
+patchfiles	patch-include-ogg-os_types.h.diff
 
 post-configure {
     if {[variant_isset universal]} {
