multimedia/libogg whitespace edits, added modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@73072 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libogg/Portfile
+++ b/dports/multimedia/libogg/Portfile
@@ -1,10 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem      1.0
 
 name            libogg
 version         1.2.1
-revision	1
+revision        1
 categories      multimedia
 platforms       darwin
 use_parallel_build  yes
@@ -22,7 +23,7 @@ checksums           md5     b998c2420721146df3b3d0e7776c97b9 \
                     sha1    7d8b49e6546f29e6ade7b5dd5d85c869e35b428a \
                     rmd160  50fd476d5ed7decb46626795c0e667c32404cc8c
 
-patchfiles	patch-include-ogg-os_types.h.diff
+patchfiles      patch-include-ogg-os_types.h.diff
 
 post-configure {
     if {[variant_isset universal]} {
