--- a/dports/audio/libvorbis/Portfile
+++ b/dports/audio/libvorbis/Portfile
@@ -4,10 +4,10 @@
 PortSystem      1.0
 
 name            libvorbis
-version         1.3.1
+version         1.3.2
 categories      audio
 platforms       darwin
-maintainers     nomaintainer
+maintainers     rmstonecipher openmaintainer
 description     The Vorbis General Audio Compression Codec
 
 long_description \
@@ -23,9 +23,9 @@ depends_build   port:pkgconfig
 
 depends_lib     port:libogg
 
-checksums           md5     016e523fac70bdd786258a9d15fd36e9 \
-                    sha1    0874dd08699240b868b22979da4c95ae6325006b \
-                    rmd160  0ed122d628c3c0152ff2d245aaf5e7ac2667f0cc
+checksums           md5     c870b9bd5858a0ecb5275c14486d9554 \
+                    sha1    4b089ace4c8420c479b2fde9c5b01588cf86c959 \
+                    rmd160  90636428d1e83531b948e4823413504162004790
 
 configure.args  --disable-oggtest
 
