--- a/dports/python/py-orbit/Portfile
+++ b/dports/python/py-orbit/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name				py-orbit
-version		2.14.3
+version				2.24.0
 categories			python gnome
 platforms			darwin
 maintainers			nomaintainer
@@ -16,13 +16,17 @@ long_description	PyORBit is a Python binding for the ORBit2 CORBA ORB. It \
 					IModule typelib capabilities.
 
 homepage			http://www.pygtk.org/
-master_sites		gnome:sources/pyorbit/2.14/
+master_sites		gnome:sources/pyorbit/[join [lrange [split $version .] 0 1] .]/
 use_bzip2			yes
 distname			pyorbit-${version}
-checksums			md5 3c4d42ae1a7303fd85071a842617043f
+checksums			md5     574593815e75ee6e98062c75d6d1581f \
+					sha1    f9877ce9672ed3c3d001b86924f1b6514a79efc9 \
+					rmd160  55aa1c3ac0739d398d8e9bbda93ef36f7c659360
 
 depends_lib			port:python24 \
 					port:orbit2
+
+configure.python	${prefix}/bin/python2.4
 
 build.args          PYTHON_LDFLAGS= PYTHON_LIBS=
 
