gauche: doesn't support +universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@73076 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/gauche/Portfile
+++ b/dports/lang/gauche/Portfile
@@ -44,6 +44,8 @@ test.run            yes
 
 destroot.target     slibcat-in-place install-pkg install-doc
 
+universal_variant   no
+
 variant euc_jp conflicts sjis no_multibyte { configure.args-delete --enable-multibyte=utf-8
                     configure.args-append --enable-multibyte=euc-jp }
 variant sjis conflicts euc_jp no_multibyte { configure.args-delete --enable-multibyte=utf-8
