disvf: add 'supported_archs noarch'
git-svn-id: https://svn.macports.org/repository/macports/trunk@73080 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/disvf/Portfile
+++ b/dports/tex/disvf/Portfile
@@ -10,6 +10,7 @@ description     A perl script to convert Japanese Virtual Font files to Virtual 
 long_description \
                 ${description}
 platforms       darwin
+supported_archs noarch
 homepage        http://itohws03.ee.noda.sut.ac.jp/~matsuda/ttf2pk/
 master_sites    http://itohws03.ee.noda.sut.ac.jp/~matsuda/ttf2pk/
 distfiles       disvf.pl
@@ -25,7 +26,7 @@ extract {
     copy ${distpath}/disvf.pl ${worksrcpath}/disvf.pl
 }
 
-configure {}
+use_configure   no
 
 build {}
 
