xproto: Bump to 7.0.19
git-svn-id: https://svn.macports.org/repository/macports/trunk@73084 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-xproto/Portfile
+++ b/dports/x11/xorg-xproto/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		xorg-xproto
-version		7.0.18
+version		7.0.19
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org xproto
@@ -16,15 +16,49 @@ master_sites 	http://xorg.freedesktop.org/archive/individual/proto
 distname	xproto-${version}
 use_bzip2	yes
 
-checksums           md5     6b8a34b274c6fceaffe57c579db826b9 \
-                    sha1    252596e7264f3174d535bf67fd1b704b1ba8f699 \
-                    rmd160  526f579590bc7dadbd3967d4e8ac5f174e80c6ac
+checksums           md5     700f8663c23713c2a81a6038a7d358f0 \
+                    sha1    c080da482474dd422cb90b52202bd616cf0854e1 \
+                    rmd160  bc990beca0aa7d8a1b5c110ed4e64aca3669fe81
 
 post-destroot {
     set docdir ${prefix}/share/doc/${name}-${version}
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog \
         ${destroot}${docdir}
+}
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
 }
 
 livecheck.type  regex
