fix #20966 - growl 1.1.4 failed to build on snow leopard fix #18765 - Growl 1.1.4 build error not too sure about universal builds
git-svn-id: https://svn.macports.org/repository/macports/trunk@73090 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/Growl/Portfile
+++ b/dports/aqua/Growl/Portfile
@@ -1,11 +1,11 @@
 # $Id$
 
-PortSystem 1.0
+PortSystem              1.0
+PortGroup               xcode 1.0
 
 name			Growl
-set base_version	1.1.4
+set base_version	1.1.6
 version			${base_version}
-categories		aqua
 platforms		darwin
 maintainers		boeyms openmaintainer
 description		global notification system for Mac OS X
@@ -16,28 +16,70 @@ long_description	Growl is a global notification system for Mac OS X. Any \
 homepage		http://growl.info/
 
 master_sites	${homepage}files/source/
-checksums		md5 f497b5485f644e767482764da1813116 \
-				sha1 33bf8a3b122072a6713657e577a84b7f0ef8f839 \
-				rmd160 0052da5775ee1e8e4fe11316810ed6b87aa204ef
+
+checksums           md5     ab0e668ae536257e9845b80b27d6a8e6 \
+                    sha1    9700a04b995c7ce808c3f37a6a0556785de55a3a \
+                    rmd160  e43f232073a58d077b0fe1bd772d4f257c2edc83
+
 use_bzip2		yes
 distname		${distname}-src
 
-# The following patch selection makes the source build for a single
-# architecture, rather than as universal binaries as the distributed source is
-# configured to do.  This probably plays havoc with the MacPorts +universal
-# variant, so I'll need to think further about this.
-patchfiles		patch-Growl.xcodeproj__project.pbxproj.${os.arch}.diff
-use_configure		no
-build.target		growl
-destroot.destdir	PREFIX=${destroot}
+xcode.target		Growl
+destroot.destdir	DSTROOT=${worksrcpath}/build
+xcode.destroot.path	/destroot
+
+post-patch {
+	reinplace "s|REVISION=.*|REVISION=116|g" ${worksrcpath}/generateHgRevision.sh
+}
+
+# install only Growl.prefPane
+post-destroot {
+	xinstall -d "${destroot}/Library/Preference Panes"
+	move ${worksrcpath}/build/destroot/Growl.prefPane "${destroot}/Library/Preference Panes"
+}
 
 # The old behaviour of automatically installing the contributed extras in the
 # source distribution has been disabled for now, as it is not apparent that
 # every Growl user will want these.  They should probably go into other ports,
 # in any case.
 
-variant universal {
-	patchfiles-delete \
-		patch-Growl.xcodeproj__project.pbxproj.${os.arch}.diff
+platform darwin 10 {
+	# Common/Source/LoginItemAE.c uses Carbon so can't build x86_64
+	if {![variant_isset universal]} {
+		configure.build_arch	i386
+	}
+	
+	# the 10.4 SDK might not be installed, use the system's default
+	patchfiles-append patch-Growl.xcodeproj__project.pbxproj.no-10.4sdk.diff
+}
+
+platform darwin 8 {
+	patchfiles-append patch-Growl.xcodeproj__project.pbxproj.no_separate_strip.diff
+}
+
+# this proc is overriden to remove the SYMROOT=build/ configuration
+# overwise, Extras/GrowlAction builds in Extras/GrowlAction/build instead of build
+proc xcode::get_build_args {args} {
+    global tcl_platform
+    global configure.universal_archs configure.build_arch macosx_deployment_target
+    global os.major os.arch
+    global developer_dir configure.sdkroot
+
+    set xcode_build_args "OBJROOT=build/"
+
+    # MACOSX_DEPLOYMENT_TARGET
+    append xcode_build_args " MACOSX_DEPLOYMENT_TARGET=${macosx_deployment_target}"
+
+    # ARCHS
+    if {[variant_exists universal] && [variant_isset universal]} {
+        append xcode_build_args " ARCHS=\"${configure.universal_archs}\""
+    } else {
+        append xcode_build_args " ARCHS=${configure.build_arch}"
+    }
+
+    # SDKROOT
+    append xcode_build_args " SDKROOT=\"${configure.sdkroot}\""
+
+    return $xcode_build_args
 }
 
