gwenhywfar4: fix issue #27117 - added for now only qt4 gui (i.e. explicitely no gtk2 gui)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73091 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gwenhywfar4/Portfile
+++ b/dports/devel/gwenhywfar4/Portfile
@@ -4,6 +4,7 @@ PortSystem        1.0
 
 name              gwenhywfar4
 version           4.0.1
+revision          1
 
 # this is specific to this port and *version* for downloading it
 set release       54
@@ -39,6 +40,7 @@ configure.args    --with-qt4-libs=${prefix}/lib \
                   --with-qt4-includes=${prefix}/include \
                   --with-qt4-moc=${prefix}/bin/moc \
                   --with-qt4-uic=${prefix}/bin/uic \
+                  --with-guis=qt4 \
                   --enable-static
 
 patchfiles        patch-qt4-configure.diff
