mod_security: working master_sites (#25634), multiple checksums
git-svn-id: https://svn.macports.org/repository/macports/trunk@73092 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/mod_security/Portfile
+++ b/dports/www/mod_security/Portfile
@@ -10,10 +10,11 @@ long_description	ModSecurity is an open source intrusion detection and \
 			embedded into the web server, acting as a powerful \
 			umbrella - shielding applications from attacks. \
 			It supports both branches of the Apache web server.
-homepage	http://www.modsecurity.org
-master_sites	${homepage}/download/
+homepage	http://www.modsecurity.org/
+master_sites	sourceforge:macports
 platforms	darwin 
-checksums	md5 f6bf4724dd0db3d37586b64bc0ee160d
+checksums	md5 f6bf4724dd0db3d37586b64bc0ee160d \
+		sha1 9b6df25f3e5cf97b7c18caba79f90dca54800368
 
 use_configure	no
 
