p5-data-dumper: Whitespace (see #27130)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73093 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-data-dumper/Portfile
+++ b/dports/perl/p5-data-dumper/Portfile
@@ -1,16 +1,16 @@
 # $Id$
 
-PortSystem      1.0
-PortGroup       perl5 1.0
+PortSystem          1.0
+PortGroup           perl5 1.0
 
-perl5.setup     Data-Dumper 2.125
-maintainers     nomaintainer
-platforms       darwin
-description     Stringified Perl data structures, suitable for both printing \
-                and "eval"
+perl5.setup         Data-Dumper 2.125
+maintainers         nomaintainer
+platforms           darwin
+description         Stringified Perl data structures, suitable for both \
+                    printing and "eval"
 
-long_description	${description}
+long_description    ${description}
 
-checksums       md5     0a55f73b1218641d449989c14de4584b \
-                sha1    42b9b39912d2801dd037189793f6577006ba64b1 \
-                rmd160  cf6008588e29e36509f22fbc65c1061755dec9fc
+checksums           md5     0a55f73b1218641d449989c14de4584b \
+                    sha1    42b9b39912d2801dd037189793f6577006ba64b1 \
+                    rmd160  cf6008588e29e36509f22fbc65c1061755dec9fc
