p5-data-dumper: Version bump + add maintainer (#27130)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73094 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-data-dumper/Portfile
+++ b/dports/perl/p5-data-dumper/Portfile
@@ -3,14 +3,20 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Data-Dumper 2.125
-maintainers         nomaintainer
+perl5.setup         Data-Dumper 2.128
+maintainers         l2g.to:larry+macports
 platforms           darwin
 description         Stringified Perl data structures, suitable for both \
                     printing and "eval"
 
-long_description    ${description}
+long_description    Given a list of scalars or reference variables, writes \
+                    out their contents in Perl syntax. The references can \
+                    also be objects.  The contents of each variable is \
+                    output in a single Perl statement.  Handles \
+                    self-referential structures correctly.  The return value \
+                    can be \"eval\"ed to get back an identical copy of the \
+                    original reference structure.
 
-checksums           md5     0a55f73b1218641d449989c14de4584b \
-                    sha1    42b9b39912d2801dd037189793f6577006ba64b1 \
-                    rmd160  cf6008588e29e36509f22fbc65c1061755dec9fc
+checksums           md5     d0901d32dea3b78290383034b5135cbb \
+                    sha1    bb3ef6e62a4584c60a5e84c708669935e4b86aef \
+                    rmd160  e0b5bd9b3253e1f900ade0e48898b4d93cd82202
