pgf: depend on texlive-basic to provide texhash rather than all of texlive
git-svn-id: https://svn.macports.org/repository/macports/trunk@73099 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/pgf/Portfile
+++ b/dports/tex/pgf/Portfile
@@ -25,7 +25,7 @@ checksums           md5     fb8cb62462f8248e327bf23ee5b9ccda \
 
 livecheck.regex     <title>pgf version (.*) released.*</title>
 
-depends_lib         bin:texhash:texlive
+depends_lib         bin:texhash:texlive-basic
 
 use_configure       no
 build { }
