djview: Fixes ticket #27073 : qmake sometimes creates a Makefile with "-arch foo -arch" for linking, which generates an error -- so patch the created Makefile to remove this issue.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73103 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/djview/Portfile
+++ b/dports/aqua/djview/Portfile
@@ -29,16 +29,41 @@ checksums           md5     642105970467cf0864c0073140d1fa11 \
 depends_lib-append \
     port:djvulibre
 
+archcheck.files \
+    lib/libdjvulibre.dylib \
+    lib/libQtCore.dylib
+
+universal_variant yes
+
+configure.ldflags
 configure.args \
     --disable-nsdejavu \
     --disable-desktopfiles \
     QMAKESPEC=${qt_mkspecs_dir}/macx-g++
 
-universal_variant yes
-
-# QMake does not handle this flag.
+# djview's 'configure' does not handle this flag.
 configure.universal_args-delete --disable-dependency-tracking
-configure.args-delete  --disable-dependency-tracking
+configure.args-append           --disable-dependency-tracking
+
+# when Qt is installed without +universal, and qmake is called with
+# "QMAKE_LDFLAGS += -arch foo", and "foo" is the native arch, then, at
+# least sometimes, qmake will erroneously remove the second "foo" but
+# leave the "-arch" flag -- generating an error at linking.  Not sure
+# if this is the case with +debug; does not matter for this port,
+# since it has not debug variant.
+post-configure {
+    if {![variant_isset universal]} {
+        reinplace "s|\\(-arch ${build_arch}\\) -arch|\\1|" \
+            ${worksrcpath}/src/Makefile
+    }
+}
+
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
+    }
+}
 
 destroot {
     xinstall -m 755 -d ${destroot}${applications_dir}
