djview: Fix archcheck to append, since the first file is added in the qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73104 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/djview/Portfile
+++ b/dports/aqua/djview/Portfile
@@ -29,7 +29,7 @@ checksums           md5     642105970467cf0864c0073140d1fa11 \
 depends_lib-append \
     port:djvulibre
 
-archcheck.files \
+archcheck.files-append \
     lib/libdjvulibre.dylib \
     lib/libQtCore.dylib
 
