--- a/dports/devel/qtscriptgenerator/Portfile
+++ b/dports/devel/qtscriptgenerator/Portfile
@@ -1,13 +1,14 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4 1.1
+PortGroup           qt4 1.0
 
 name                qtscriptgenerator
 version             0.1.0
-revision            2
+revision            3
 categories          devel kde4
-maintainers         nomaintainer
+maintainers         michaelld openmaintainer
 description         QtScript bindings generator.
 long_description    Qt Script Generator is a tool that generates \
     Qt bindings for Qt Script. With the generated bindings you get \
@@ -20,19 +21,39 @@ checksums           md5     ca4046ad4bda36cd4e21649d4b98886d \
                     sha1    eeae733106369e289f257b754822bc372fd6ba75 \
                     rmd160  a02ce6fea2fbc3d3a6ae9e51c6b563ef4bcd51f3 
 
-use_configure   no
+depends_lib-append  port:phonon port:automoc
 
-build {
-    foreach dir {generator qtbindings} {
-        if { ${dir}=="generator" } {
-            system "cd ${worksrcpath}/${dir} && export QTDIR=${qt_dir} && ${qt_qmake_cmd} && make && ${worksrcpath}/${dir}/generator"
-        } else {
-            system "cd ${worksrcpath}/${dir} && export QTDIR=${qt_dir} && ${qt_qmake_cmd} && make"
-        }
+patchfiles          patch-generator.diff \
+                    patch-qtbindings.diff
+
+post-patch {
+    # copy the QMake build script into place
+    copy ${filespath}/qtsg.pro ${worksrcpath}
+}
+
+# set up to use the installed QMake files
+configure.cmd       ${qt_qmake_cmd}
+configure.pre_args  CONFIG+="${qt_arch_types}"
+configure.args      "-o Makefile qtsg.pro"
+
+# allow for debug variant
+if {[variant_isset debug]} {
+    configure.pre_args-append CONFIG+=debug_and_release
+} else {
+    configure.pre_args-append CONFIG+=release
+}
+
+# qmake does not handle these flags flags
+configure.universal_args-delete --disable-dependency-tracking
+configure.args-delete           --disable-dependency-tracking
+
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
     }
 }
 
-destroot {
-    xinstall -m 0755 -d ${destroot}${qt_plugins_dir}/script
-    eval xinstall -m 0644 [glob ${worksrcpath}/${qt_plugins_dir}/script/*] ${destroot}${qt_plugins_dir}/script/
-}
+universal_variant   yes
+
+variant debug description "Build release and debug versions" {}
