qca changes: * better way to handle setting arches for which to build. * allow use of ccache/distcc.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73107 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca/Portfile
+++ b/dports/devel/qca/Portfile
@@ -35,6 +35,17 @@ checksums            md5     27ebdfbd9869d90dae078a6decd029f4 \
 #     variant is requested.
 patchfiles           patch-configure.diff
 
+post-patch {
+    # set arch type(s)
+    reinplace "s|@ARCHES@|${qt_arch_types}|g" \
+        ${worksrcpath}/configure
+
+    # since Qt now uses the correct install_name for libraries,
+    # remove that from QCA's library
+    reinplace "/QMAKE_LFLAGS_SONAME/d" \
+        ${worksrcpath}/src/src.pro
+}
+
 # set QCA to install into the QT4 directory
 configure.pre_args   --prefix=${qt_dir}
 
@@ -44,6 +55,18 @@ configure.args        --verbose         \
                       --qtdir=${qt_dir} \
                       --release         \
                       --no-framework
+
+# QCA's configure does not handle this flag,
+# but does not generate an error either.
+configure.universal_args-delete --disable-dependency-tracking
+configure.args-delete  --disable-dependency-tracking
+
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
+    }
+}
 
 post-destroot {
     # alias to destroot QCA top-level directory
@@ -64,7 +87,7 @@ post-destroot {
 }
 
 variant debug description \
-{Build both release and debug library / framework} {
+{Build both release and debug library} {
     configure.args-delete --release
     configure.args-append --debug-and-release
 }
@@ -78,42 +101,12 @@ variant examples description \
     }
 }
 
-post-patch {
-    if {[variant_exists universal] && [variant_isset universal]} {
-        # set universal arch types, depending on what the user has specified
-        array set macports_to_qt_build_arch {
-            ppc     ppc
-            i386    x86
-            ppc64   ppc64
-            x86_64  x86_64
-        }
-        set qca_arch_types ""
-        set qca_qt_config_str ""
-        foreach arch ${universal_archs} {
-            set this_arch_in_qt $macports_to_qt_build_arch($arch)
-            lappend qca_arch_types ${this_arch_in_qt}
-            lappend qca_qt_config_strs "contains(QT_CONFIG,${this_arch_in_qt})"
-        }
-        set qca_arch_types_str [join ${qca_arch_types} " "]
-        set qca_qt_config_str [join ${qca_qt_config_strs} ":"]
-        reinplace "s/@UNIVERSAL_CONTAINS@/${qca_qt_config_str}/g" \
-            ${worksrcpath}/configure
-        reinplace "s/@UNIVERSAL_TYPES@/${qca_arch_types_str}/g" \
-            ${worksrcpath}/configure
-    }
-}
-
 platform darwin 8 {
     # might not be necessary
     if {[variant_exists universal] && [variant_isset universal]} {
         configure.args-append --mac-sdk=${developer_dir}/SDKs/MacOSX10.4u.sdk
     }
 }
-
-# QCA's configure does not handle this flag,
-# but does not generate an error either.
-configure.universal_args-delete --disable-dependency-tracking
-configure.args-delete  --disable-dependency-tracking
 
 variant universal {
     # Add the universal flag understood by qmake
