qtpfsgui changes: * better way to handle setting arch type(s). * allow for use of ccache/distcc.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73108 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qtpfsgui/Portfile
+++ b/dports/aqua/qtpfsgui/Portfile
@@ -27,33 +27,21 @@ checksums       md5     5a6421391e373c912e4a793e131151c8 \
 patchfiles      patch-project.pro.diff
 
 post-patch {
-    # set ARCHES in project.pro (per the second patchfile),
-    set MP_ARCHES ""
-    if {[variant_exists universal] && [variant_isset universal]} {
-        # build for universal, as defined by the local user
-        set MP_ARCHES ${universal_archs}
-    } else {
-        # build arch specific
-        set MP_ARCHES ${build_arch}
-    }
-    array set macports_to_qt_build_arch {
-        ppc     ppc
-        i386    x86
-        ppc64   ppc64
-        x86_64  x86_64
-    }
-    set QT_ARCHES ""
-    foreach arch ${MP_ARCHES} {
-        set this_arch_in_qt $macports_to_qt_build_arch($arch)
-        lappend QT_ARCHES ${this_arch_in_qt}
-    }
-    set ARCHES [join ${QT_ARCHES} " "]
-    reinplace "s|@@ARCHES@@|${ARCHES}|g" ${worksrcpath}/project.pro
+    # set arch type(s)
+    reinplace "s|@ARCHES@|${qt_arch_types}|g" \
+        ${worksrcpath}/project.pro
 }
 
 configure.pre_args  PREFIX="${prefix}"
 configure.args      APPLICATIONS_DIR="${applications_dir}" \
-                    DOCDIR="${prefix}/share/doc/${name}" \
-                    QMAKE_CC="\${CC}" \
-                    QMAKE_CXX="\${CXX}"
+                    DOCDIR="${prefix}/share/doc/${name}"
 configure.cmd   "LOCALSOFT=${prefix} ${qt_qmake_cmd}"
+
+# allow ccache, if specified by the user
+pre-build {
+    if {[tbool configure.ccache]} {
+        build.post_args "CCACHE=ccache"
+    }
+}
+
+universal_variant   yes
